# state_estimation

src/data_processing/: CMakeLists.txt  package.xml
src/data_processing/data/caliberation/: 2m_1.csv  2m_2.csv  2m_3.csv  4m_1.csv  4m_2.csv  4m_3.csv
src/data_processing/data/desired_trajectory/: indoor_target_path.csv
src/data_processing/data/estimated_trajectories/high_quality_1/: ekf_path.csv  encoder_data.csv  estimated_poses.csv
src/data_processing/data/ground_truth/: gt5.csv
src/data_processing/data/online_plotting/run_no426/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no427/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no428/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no429/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no430/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no431/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no432/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no433/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no434/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no436/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no437/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no438/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no439/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no440/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no441/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no442/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv  ndt_odom_temp.csv
src/data_processing/data/online_plotting/run_no443/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv  ndt_odom_temp.csv
src/data_processing/data/online_plotting/run_no444/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv  ndt_odom_temp.csv
src/data_processing/data/online_plotting/run_no445/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv  ndt_odom_temp.csv
src/data_processing/data/online_plotting/run_no446/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no447/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no448/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no449/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv  ndt_odom_temp.csv
src/data_processing/data/online_plotting/run_no450/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no451/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no452/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no453/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no454/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no455/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no456/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/online_plotting/run_no457/: bag2csv.csv  drift_log.csv  ekf_odom.csv  ndt_odom.csv
src/data_processing/data/original_runs/: data_log_1.csv  data_log_3.csv  data_log_4.csv  data_log_5.csv  data_log_6.csv  data_log_7.csv  data_log_8.csv
src/data_processing/data/turning/: lt_1.csv  rt_1.csv  rt_2.csv
src/data_processing/launch/: online_pipeline.launch
src/data_processing/scripts/: ndt_path_logger.py  ndt_repub.py  offline_plot_trajectory.py  plot_trajectory.py  ppt_maker.py  presentation.pptx  temp_ndt_path_logger.py
src/dead_reckoning/: CMakeLists.txt  package.xml
src/dead_reckoning/config/: ekf_localization_local.yaml  navsat.yaml
src/dead_reckoning/include/dead_reckoning/: BicycleModelSimple.hpp
src/dead_reckoning/launch/: dead_reckoning.launch  ekf_launch.launch  temp.launch
src/dead_reckoning/scripts/: imu_mag_converter.py  pub_init_pose.py  vel_remap.py
src/dead_reckoning/src/: BicycleModelSimple.cpp  bicycle_node.cpp  traj_from_csv.cpp
src/state_estimation/: CMakeLists.txt  package.xml
src/state_estimation/config/: ekf_localization_local.yaml  ekf_localization_local2.yaml  navsat.yaml
src/state_estimation/launch/: state_estimation.launch  temp.launch
src/state_estimation/scripts/: Untitled-1.py  gps_heading.py  lla_to_odom.py  ndt_path_publisher.py  pubpose.py  utils.py
src/state_estimation/src/: BicycleModelSimple.cpp  bicycle_node.cpp  odom_to_ndt.cpp
(+131 files in other folders)
